fixed the TVs z-index

--- a/src/assets/styles/yt-tv-style.css
+++ b/src/assets/styles/yt-tv-style.css
@@ -9,6 +9,7 @@
   justify-content: center;
   cursor: pointer;
   filter: drop-shadow(0 0 .2rem violet);
+  z-index: 2;
 }
 
 .tv-wrapper:hover {
@@ -17,20 +18,14 @@
 
 .tv-video {
   position: absolute;
-  z-index: 5;
-  pointer-events: none;
+  z-index: 3;
 }
 
 .tv-frame {
   position: relative;
   width: 100%;
   height: auto;
-  z-index: 13;
-  -webkit-user-drag: none;
-}
-
-.no-pointer-events {
-  pointer-events: none;
+  z-index: 4
 }
 
 .tv-noise-overlay {
@@ -39,15 +34,13 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 5;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
   background: black;
   pointer-events: none;
-  user-select: none;
-  -webkit-user-drag: none;
+
 }
 
 .tv-noise-overlay img {
@@ -55,6 +48,7 @@
   height: 100%;
   object-fit: cover;
   image-rendering: pixelated;
+  pointer-events: none;
 }
 
 .hidden {
@@ -94,7 +88,6 @@
 }
 
 .tv-volume-knob {
-  z-index: 15;
   position: relative;
   bottom: 15%;
   width: 120px;
@@ -103,6 +96,7 @@
   align-items: center;
   justify-content: center;
   user-select: none;
+  z-index: 15;
 }
 
 .tv-volume-knob input[type="range"] {
@@ -113,7 +107,7 @@
 }
 
 .tv-controls {
-  z-index: 14;
+  pointer-events: all;
   position: absolute;
   bottom: 84%;
   height: 20%;
@@ -139,6 +133,7 @@
   align-items: center;
   justify-content: center;
   padding: 0;
+  z-index: 20;
 }
 
 .restart-btn-img {
@@ -168,14 +163,12 @@
 .tv-controls,
 .tv-volume-knob {
   opacity: 0;
-  pointer-events: none;
   transition: opacity 0.3s;
 }
 
 .tv-wrapper:hover .tv-controls,
 .tv-wrapper:hover .tv-volume-knob {
   opacity: 1;
-  pointer-events: auto;
   transition: opacity 1s;
 }
 
@@ -200,12 +193,10 @@
   align-items: center;
   justify-content: center;
   opacity: 0;
-  pointer-events: none;
   transition: opacity 0.3s;
 }
 
 .tv-wrapper:hover .tv-seek-controls {
   opacity: 1;
-  pointer-events: auto;
   transition: opacity 1s;
 }
